ltr - rtl direction (joe)

--- a/ALTC-Site/Areas/Admin/Views/Account/_LoginLayout.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Account/_LoginLayout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WebApplication1.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/login.s" asp-append-version="true" />
 </head>
 <body>
     <header>
