--- a/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -286,14 +286,14 @@
             <!-- /.sidebar -->
         </aside>
         <!-- Content Wrapper. Contains page content -->
-        <div class="content-wrapper">
+        <div style="padding: 9px 22px !important;" class="content-wrapper">
             @RenderBody()
 
         </div>
         <!-- /.content-wrapper -->
         <footer class="main-footer">
-            <strong>Copyright &copy; 2014-2021</strong>
-            All rights reserved.
+            <strong>Copyright &copy; 2023-2024</strong>
+            All rights reserved ALTC.
             
         </footer>
 
