--- a/ALTC-Site/Areas/Admin/Views/TechnicalSupport/Index.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/TechnicalSupport/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
+
+<div class=" ">
+
 <h1>Index</h1>
 
 <p>
@@ -59,3 +62,7 @@
 }
     </tbody>
 </table>
+
+
+
+</div>
