--- a/ALTC-Site/Views/Team/_GetALL.cshtml
+++ b/ALTC-Site/Views/Team/_GetALL.cshtml
@@ -14,7 +14,7 @@
                 <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
                     <div class="member">
                         <div class="member-img">
-                            <img src="" class="img-fluid" alt="">
+                            <img src="/assets/img/about.jpg" class="img-fluid" alt="">
                             <div class="social">
                                 <a href=""><i class="bi bi-twitter"></i></a>
                                 <a href=""><i class="bi bi-facebook"></i></a>
@@ -22,18 +22,20 @@
                                 <a href=""><i class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
-                        <div class="member-info">
-                            <h4>Walter White</h4>
-                            <span>Chief Executive Officer</span>
+                        <div class="member-info ">
+
+                            <h4 class="text-center">Walter White</h4>
+                            <span class="text-center">Chief Executive Officer</span>
                         </div>
                     </div>
                 </div>
+            
      }
        
 
            
 
-        </div>
+        </>
 
     </div>
 </section><!-- End Team Section -->
