--- a/ALTC-Site/Areas/Admin/Views/Account/Login.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Account/Login.cshtml
@@ -6,130 +6,187 @@
     ViewData["Title"] = "Login";
 }
 
-
 <style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    html,
-    body {
-        height: 100%;
-    }
-
-    html {
-        background: linear-gradient(to right bottom, #fbdb89, #f48982);
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 100%;
-        height: 100%;
-        background-attachment: fixed;
-    }
-
-    body {
-        font-family: sans-serif;
-        line-height: 1.4;
-        display: flex;
-    }
-
-    .container {
-        width: 400px;
-        margin: auto;
-        padding: 36px 48px 48px 48px;
-        background-color: #f2efee;
-        border-radius: 11px;
-        box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
-    }
-
-    .login-title {
-        padding: 15px;
-        font-size: 22px;
-        font-weight: 600;
-        text-align: center;
-    }
-
-    .login-form {
-        display: grid;
-        grid-template-columns: 1fr;
-        row-gap: 16px;
-    }
-
-        .login-form label {
-            display: block;
-            margin-bottom: 8px;
-        }
-
-        .login-form input {
-            width: 100%;
-            padding: 1.2rem;
-            border-radius: 9px;
-            border: none;
-        }
-
-   #RememberMe
-   {
-        width:0.3%;
-        padding:  0.3 rem;
-        border: none;
-
-   }
-
-            .login-form input:focus {
-                outline: none;
-                box-shadow: 0 0 0 4px rgba(253, 242, 233, 0.5);
-            }
-
-    .btn--form {
-        background-color: #f48982;
-        color: #fdf2e9;
-        align-self: end;
-        padding: 8px;
-    }
-
-    .btn,
-    .btn:link,
-    .btn:visited {
-        display: inline-block;
-        text-decoration: none;
-        font-size: 20px;
-        font-weight: 600;
-        border-radius: 9px;
-        border: none;
-        cursor: pointer;
-        font-family: inherit;
-        transition: all 0.3s;
-    }
-
-    button {
-        outline: 1px solid #f48982;
-    }
-
-    .btn--form:hover {
-        background-color: #fdf2e9;
-        color: #f48982;
-    }
-
+ 
+ *, *:before, *:after {
+	 box-sizing: border-box;
+}
+ body {
+	 align-items: center;
+	 background: #fafafa;
+	 display: flex;
+	 font-family: 'Rajdhani', sans-serif;
+	 height: 100vh;
+	 justify-content: center;
+}
+ .contact-wrapper {
+	 background: #fff;
+	 box-shadow: 3px 3px 2px rgba(0, 0, 0, .05);
+	 border-radius: 0.75em;
+	 padding: 2em;
+	 width: 25em;
+	 margin-top:40px;
+}
+ .login-cta > h2 {
+	 color: #3e3f5e;
+	 font-size: 1.75rem;
+	 text-align: center;
+}
+ .socials-wrapper > header > h2 {
+	 background: #fff;
+	 color: #3e3f5e;
+	 font-size: 1rem;
+	 position: relative;
+	 text-align: center;
+	 z-index: 10;
+}
+ .socials-wrapper > header > h2:after, .socials-wrapper > header > h2:before {
+	 background: #d3d3e2;
+	 content: '';
+	 display: block;
+	 height: 0.1em;
+	 position: absolute;
+	 top: 50%;
+	 transform: translatey(-50%);
+	 width: 17.5%;
+}
+ .socials-wrapper > header > h2:after {
+	 right: 0;
+}
+ .socials-wrapper > header > h2:before {
+	 left: 0;
+}
+ .socials-wrapper > ul {
+	 display: flex;
+	 list-style: none;
+	 justify-content: center;
+	 padding: 0;
+}
+ .socials-wrapper > ul > li {
+	 margin: 0.5em;
+}
+ .socials-wrapper > ul > li > a {
+	 align-items: center;
+	 border-radius: 0.5em;
+	 color: #fff;
+	 display: flex;
+	 height: 2em;
+	 justify-content: center;
+	 text-align: center;
+	 text-decoration: none;
+	 transition: all 300ms ease;
+	 width: 2em;
+}
+ .socials-wrapper > ul > li > a.facebook {
+	 background-color: #3763d2;
+}
+ .socials-wrapper > ul > li > a.twitter {
+	 background-color: #1abcff;
+}
+ .socials-wrapper > ul > li > a.twitch {
+	 background-color: #7b5dfa;
+}
+ .socials-wrapper > ul > li > a.youtube {
+	 background-color: #fd434f;
+}
+ .socials-wrapper > ul > li > a:hover {
+	 transform: translatey(-0.25em);
+}
+ form {
+	 margin: 2em 0;
+}
+ form > .form-row {
+	 display: flex;
+	 margin: 0.75em 0;
+	 position: relative;
+}
+ form > .form-row > span {
+	 background: #fff;
+	 color: #adafca;
+	 display: inline-block;
+	 font-weight: 400;
+	 left: 1em;
+	 padding: 0 0.5em;
+	 position: absolute;
+	 pointer-events: none;
+	 transform: translatey(-50%);
+	 top: 50%;
+	 transition: all 300ms ease;
+	 user-select: none;
+}
+ form > .form-row > input, form > .form-row > button {
+	 border-radius: 0.5em;
+	 font-family: inherit;
+	 padding: 1em 0.5em;
+	 width: 100%;
+}
+ form > .form-row > input {
+	 font-weight: bold;
+	 transition: 100ms ease all;
+	 width: 100%;
+}
+ form > .form-row > input[type=text], form > .form-row > input[type=password] {
+	 border: 0.075em solid #ddd;
+}
+ form > .form-row > input:valid + span {
+	 top: 0;
+	 font-size: 0.9rem;
+}
+ form > .form-row > input:invalid + span {
+	 top: 50%;
+}
+ form > .form-row > input:focus + span {
+	 top: 0;
+}
+ form > .form-row > input:required {
+	 box-shadow: none;
+}
+ form > .form-row > input:focus {
+	 border-color: #7b5dfa;
+	 outline: none;
+}
+ form > .form-row > input:focus:invalid {
+	 box-shadow: none;
+	 top: 50%;
+}
+ form > .form-row > input:focus:valid {
+	 top: 0;
+}
+ form > .form-row > button {
+	 background-color: #7b5dfa;
+	 border: 0.1em solid #7b5dfa;
+	 color: #fff;
+	 cursor: pointer;
+	 font-weight: bold;
+	 transition: all 300ms ease;
+}
+ form > .form-row > button:focus {
+	 border: 0.1em solid #532cf8;
+	 outline: none;
+}
+ form > .form-row > button:hover {
+	 background-color: #6744f9;
+}
+ 
 </style>
-<div class="container">
-    <h2 class="login-title">Log in</h2>
 
-    <form class="login-form" asp-action="Login">
-        <div>
-            <label asp-for="Email"> </label>
-            <input asp-for="Email" placeholder="Email" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-
+<div style="margin: auto;" class="contact-wrapper">
+    <header class="login-cta">
+        <h2>Account Login</h2>
+    </header>
+    <form>
+        <div style="margin-bottom:10px;" class="form-row">
+            <input type="text" required>
+            <span>Username or Email</span>
         </div>
-        <div>
-            <label asp-for="Password">Password </label>
-            <input asp-for="Password" placeholder="password" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-
+        <div class="form-row">
+            <input type="password" required>
+            <span>Password</span>
         </div>
-
-        <input type="submit" value="Login" class="btn btn--form" />
-
+        <div class="form-row"></div>
+        <div class="form-row">
+            <button type="submit">Login to your Account!</button>
+        </div>
     </form>
+   
 </div>
