--- a/ALTC-Site/Areas/Admin/Views/Team/Create.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Team/Create.cshtml
@@ -4,15 +4,20 @@
     ViewData["Title"] = "Create";
 }
 
+
 <div class="row text mx-0">
-    <div class="col-md-8 offset-2">
+    <div style="margin: auto!important; width: 90%!important; max-width: 500px!important;">
+        @* <div class="col-md-8 offset-2"> *@
         <p>
-            <h1>Add a New Team Member</h1>
+            <h1 style="text-align:center;">
+                Add a New Team Member
+            </h1>
         </p>
         <div class="row mx-0">
-            <div class="col-md-8 offset-2">
+             @* <div class="col-md-8 offset-2">  *@
+            <div style="margin: auto!important; width: 100%!important; " class="">
 
-        <form asp-action="Create" enctype="multipart/form-data">
+                <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
