--- a/ALTC-Site/Views/About/Index.cshtml
+++ b/ALTC-Site/Views/About/Index.cshtml
@@ -1,126 +1,288 @@
-﻿
-<section id="about" class="about section-bg">
-    <div class="container" data-aos="fade-up">
+﻿@{
+    //Layout = ViewData["Dir"] == "rtl" ? "_LayoutRtl" : "_LayoutLtr";
 
-        <div class="section-title">
-            <h2>Bio</h2>
-            <h3>Find Out More <span> ALTC </span></h3>
-            <p>
-                Hello! We are Arab Leading Technology
-                Top-rated Digital Marketing, Web, And Mobile App Development Company.
-            </p>
-        </div>
+    string dir = "ltr";
+    string lang = "en";
+    Layout = "~/Views/Shared/_LayoutLtr.cshtml";
+    if (ViewData["Dir"] != null & ViewData["Lang"] != null)
+    {
+        dir = ViewData["Dir"].ToString();
+        lang = ViewData["Lang"].ToString();
 
-        <div class="mt-4">
-            @* <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-                <img src="assets/img/about.jpg" class="img-fluid" alt="">
-            </div> *@
-            <div class="pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                <h3>
-                    Big Ideas, creative people, new technologies
-                    .
-                </h3>
-                <p class="fst-italic">
-                    A leading full-service Web Solutions and Digital Marketing agency, providing a comprehensive range
-                    of professional services such as Digital transformation, web design, web development, mobile app development,
-                    search engine optimization (SEO), e-commerce solutions, UI/UX design, pay-per-click advertising (PPC),
-                    social media marketing, video production, content creation, email marketing, and marketing automation.
-                </p>
-                <ul>
-                    <li>
-                        <i class="bx bx-store-alt"></i>
-                        <div>
-                            <h5>
-                                Streamlined Project Management
-                            </h5>
-                            <p>
-                                You want results. We've found that the best way to get them is to do research upfront -
-                                about your business, your competitors
-                                , your target market, and the psychographics of your customers.
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <i class="bx bx-images"></i>
-                        <div>
-                            <h5>
-                                A Dedicated Team of Experts
-                            </h5>
-                            <p>
-                                Because our customers expect the best, we employ only the best people. Our rigorous qualification
-                                process ensures that we employ experienced and highly skilled professionals.
-                            </p>
-                        </div>
-                    </li>
-                </ul>
+        if (dir == "rtl")
+        {
+            Layout = "~/Views/Shared/_LayoutRtl.cshtml";
+        }
+    }
+}
+
+
+@if (dir == "ltr")
+{
+
+    <section id="about" class="about section-bg">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>Bio</h2>
+
+                <h3>Find Out More <span> ALTC </span></h3>
                 <p>
-                    Your company's IT systems are critical to its success. We are confident that we can provide you with quality Web & Mobile Solutions, Digital Content,
-                    and Digital Marketing services in ALTC that will benefit your business.
+                    Hello! We are Arab Leading Technology
+                    Top-rated Digital Marketing, Web, And Mobile App Development Company.
                 </p>
             </div>
-        </div>
 
-    </div>
-</section><!-- End About Section -->
-<!-- ======= Services Section ======= -->
-<section id="services" class="services">
-    <div class="container" data-aos="fade-up">
+            <div class=" d-flex; justify-content-right;" class="">
 
-        <div class="section-title">
-            <h2>Services</h2>
-            <h3>Check our <span>Services</span></h3>
-            <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-                <div class="icon-box">
-                    <div class="icon"><img src="~/img/startup.png" /> </div>
-                    <h4><a href="">Digital Transformation</a></h4>
-                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                <div style="width:100%" class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+                    <h3>
+                        Big Ideas, creative people, new technologies
+                        .
+                    </h3>
+                    <p class="fst-italic">
+                        A leading full-service Web Solutions and Digital Marketing agency, providing a comprehensive range
+                        of professional services such as Digital transformation, web design, web development, mobile app development,
+                        search engine optimization (SEO), e-commerce solutions, UI/UX design, pay-per-click advertising (PPC),
+                        social media marketing, video production, content creation, email marketing, and marketing automation.
+                    </p>
+                    <ul>
+                        <li>
+                            <i class="bx bx-store-alt"></i>
+                            <div>
+                                <h5>
+                                    Streamlined Project Management
+                                </h5>
+                                <p>
+                                    You want results. We've found that the best way to get them is to do research upfront -
+                                    about your business, your competitors
+                                    , your target market, and the psychographics of your customers.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <i class="bx bx-images"></i>
+                            <div>
+                                <h5>
+                                    A Dedicated Team of Experts
+                                </h5>
+                                <p>
+                                    Because our customers expect the best, we employ only the best people. Our rigorous qualification
+                                    process ensures that we employ experienced and highly skilled professionals.
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                    <p>
+                        Your company's IT systems are critical to its success. We are confident that we can provide you with quality Web & Mobile Solutions, Digital Content,
+                        and Digital Marketing services in ALTC that will benefit your business.
+                    </p>
                 </div>
             </div>
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-                <div class="icon-box">
-                    <div class="icon"><img src="~/img/smo.png" /></div>
-                    <h4><a href="">Digital Marketing</a></h4>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
-                <div class="icon-box">
-                    <div class="icon"><img src="~/img/m3.png" /></div>
-                    <h4><a href="">Web Solutions</a></h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
-                <div class="icon-box">
-                    <div class="icon"><img src="~/img/ap.png" /></div>
-                    <h4><a href="">Mobile Solutions</a></h4>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
-                <div class="icon-box">
-                    <div class="icon"><img src="~/img/c.png" /></div>
-                    <h4><a href="">Digital Content</a></h4>
-                    <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
-                </div>
-            </div>
-
-
 
         </div>
+    </section>
 
-    </div>
-</section><!-- End Services Section -->
-<section id="team-members">
-</section>
+    <!-- End About Section -->
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>Services</h2>
+                <h3>Check our <span>Services</span></h3>
+                <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/startup.png" /> </div>
+                        <h4><a href="">Digital Transformation</a></h4>
+                        <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/smo.png" /></div>
+                        <h4><a href="">Digital Marketing</a></h4>
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/m3.png" /></div>
+                        <h4><a href="">Web Solutions</a></h4>
+                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/ap.png" /></div>
+                        <h4><a href="">Mobile Solutions</a></h4>
+                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/c.png" /></div>
+                        <h4><a href="">Digital Content</a></h4>
+                        <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </div>
+    </section>
+
+    <!-- End Services Section -->
+    <section id="team-members">
+    </section>
+}
+
+
+
+
+
+else
+{
+
+    <!-- ======= قسم حول ======= -->
+    <section id="about" class="about section-bg">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>السيرة الذاتية</h2>
+                <h3>اعرف المزيد <span>عن ALTC</span></h3>
+                <p>
+                    مرحبًا! نحن Arab Leading Technology
+                    شركة رائدة في مجال التسويق الرقمي، وتطوير الويب، وتطوير تطبيقات الهواتف المحمولة.
+                </p>
+            </div>
+
+            <div class=" d-flex; justify-content-right;" class="">
+             
+                <div style="width:100%" class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+                    <h3 class="text-right">
+                        أفكار كبيرة، أشخاص مبدعين، تقنيات جديدة
+                    </h3>
+                    <p class="fst-italic">
+                        وكالة رائدة في مجال حلول الويب الشاملة والتسويق الرقمي، نقدم مجموعة شاملة
+                        من الخدمات المهنية مثل التحول الرقمي، تصميم الويب، تطوير الويب، تطوير تطبيقات الهواتف المحمولة،
+                        تحسين محركات البحث (SEO)، حلول التجارة الإلكترونية، تصميم واجهة المستخدم/تجربة المستخدم (UI/UX)،
+                        الإعلان بالدفع للنقر (PPC)، التسويق عبر وسائل التواصل الاجتماعي، إنتاج الفيديو، إنشاء المحتوى،
+                        التسويق عبر البريد الإلكتروني، وتسويق الآلي.
+                    </p>
+                    <ul>
+                        <li class="text-right">
+                            
+                            <div>
+                                <h5 class="text-right">
+                                    إدارة المشاريع بشكل مبسط
+                                </h5>
+                                <p>
+                                    تريد النتائج. لقد وجدنا أن أفضل طريقة للحصول عليها هي إجراء البحث مسبقًا -
+                                    حول عملك، منافسيك
+                                    ، سوقك المستهدف، والسمات النفسية لعملائك.
+                                </p>
+                            </div>
+                            <i class="bx  ml-2 bx-store-alt"></i>
+                        </li>
+                        <li class="text-right">
+                            
+                            <div>
+                                <h5 class="text-right">
+                                    فريق متخصص من الخبراء
+                                </h5>
+                                <p>
+                                    لأن عملائنا يتوقعون الأفضل، نستخدم فقط أفضل الأشخاص. يضمن عملية التأهيل الصارمة لدينا
+                                    أن نوظف محترفين ذوي خبرة ومهارات عالية.
+                                </p>
+                            </div>
+                            <i class="bx ml-2 bx-images"></i>
+                        </li>
+                    </ul>
+                    <p>
+                        أنظمة تكنولوجيا المعلومات في شركتك هي حاسمة لنجاحها. نحن واثقون من أننا يمكننا توفير حلول ويب وجوال
+                        ومحتوى رقمي عالية الجودة، وخدمات تسويق رقمي في ALTC ستعود بالفائدة على عملك.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- نهاية قسم حول -->
+    @* //////////////////// *@
+
+    <!-- ======= قسم الخدمات ======= -->
+    <section id="services" class="services">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>الخدمات</h2>
+                <h3>تحقق من <span>خدماتنا</span></h3>
+                <p>
+                    يمكن أن نقول الذي في الأوقات الحالية يتسنى لنا تجربته. الوقت للاستمتاع والابتكار
+                    واكتشاف الفرص الجديدة.
+                </p>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/startup.png" /> </div>
+                        <h4><a href="">التحول الرقمي</a></h4>
+                        <p>المتعة والتلفيق والابتزاز الذين يحبذونهم أولئك الذين يشعرون بالألم والذين يكرهونهم</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/smo.png" /></div>
+                        <h4><a href="">التسويق الرقمي</a></h4>
+                        <p>المستغرب في أخذ الحق في النقد في مرحلة تسلية تظهر فيها التعديات</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/m3.png" /></div>
+                        <h4><a href="">حلول الويب</a></h4>
+                        <p>الذين لا يستثنون سوى الذين يتولون مسؤولياتهم ويكونون متهمين بأداء أعمالهم</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/ap.png" /></div>
+                        <h4><a href="">حلول الهواتف المحمولة</a></h4>
+                        <p>في مرحلة تجميل الواقع والاتهام والكراهية تلك التي تستحق المراقبة والاستغناء</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="icon-box">
+                        <div class="icon"><img src="~/img/c.png" /></div>
+                        <h4><a href="">المحتوى الرقمي</a></h4>
+                        <p>تلك التي يتعين على الإنسان اتخاذها. لا يمكن أن تكون مطمئنة ومكرهة ومتجهة إلى الجواب</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- نهاية قسم الخدمات -->
+}
+
+
 <script>
     $(document).ready(function () {
         event.preventDefault();
