--- a/ALTC-Site/Views/Home/Index.cshtml
+++ b/ALTC-Site/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿ <!-- Favicons -->
+﻿
+<!-- Favicons -->
 <link href="~/assets/img/favicon.png" rel="icon">
 <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -16,7 +17,251 @@
 <!-- Template Main CSS File -->
 <link href="~/assets/css/style.css" rel="stylesheet">
 
-<div style="margin-top:100px;"></div>
+@{
+    string dir = "ltr";
+    string lang = "en";
+    Layout = "~/Views/Shared/_LayoutLtr.cshtml";
+    if (ViewData["Dir"] != null & ViewData["Lang"] != null)
+    {
+        dir = ViewData["Dir"].ToString();
+        lang = ViewData["Lang"].ToString();
+
+        if (dir == "rtl")
+        {
+            Layout = "~/Views/Shared/_LayoutRtl.cshtml";
+        }
+    }
+} 
+
+
+
+@if (dir == "ltr")
+{
+   
+
+<div style="margin-top:62px;"></div>
+<!-- ======= Hero Section ======= -->
+<section id="hero" class="d-flex align-items-center">
+    <div class="container" data-aos="zoom-out" data-aos-delay="100">
+        <h1> Arab Leading Technology <span> ALTC</span></h1>
+        <h2>Website and App development solution for transforming and innovating businesses.</h2>
+        <daiv class="d-flex justify-content-center">
+            <a href="/Contact" class="btn-get-started scrollto">Get Started</a>
+        </div>
+</section><!-- End Hero -->
+
+<footer id="footer">
+
+    <div class="footer-newsletter">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <h4>
+                        Big Ideas, Creative people, New technologies
+                    </h4>
+                
+                    <form action="" method="post">
+                        <input type="email" name="email"><input type="submit" value="Subscribe">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+</footer><!-- End Footer -->
+<!-- ======= Featured Services Section ======= -->
+<section id="featured-services" class="featured-services">
+    <div class="container" data-aos="fade-up">
+
+        <div class="row">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+                    <div class="icon"><img src="~/img/dev.svg" /></div>
+                    <h4 class="title">
+                        <a href="">
+                            Service
+                            Web Development
+                        </a>
+                    </h4>
+                    <p class="description">Web development is the fundamental (back-end) coding of 
+                        your application or your business website, and it is critical to its success..</p>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+                    <div class="icon"><img src="~/img/ec.svg" /></div>
+                    <h4 class="title">
+                        <a href="">
+                            Ecommerce Development
+
+                        </a>
+                    </h4>
+                    <p class="description">
+                        We provide CMS (Content Management System) and 
+                        e-Commerce development like Shopify, DotNetNuke, WordPress, Magento, and custom Development.
+
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
+                    <div class="icon"><img src="~/img/ss.svg" /></div>
+                    <h4 class="title">
+                        <a href="">
+                            Mobile App Development
+                        </a>
+                    </h4>
+                    <p class="description">With a transparent development plan, we will code your 
+                        ideas and make them into reality for IOS, Android, and cross-platform apps</p>
+                </div>
+            </div>
+
+            <div class="  col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+                    <div class="icon"><img src="~/img/tt.svg" /></div>
+                    <h4 class="title">
+                        <a href="">
+                            Trending Technologies
+                        </a>
+                    </h4>
+                    <p class="description">Standards in web development changes faster than they can be implemented. 
+                        To stay one step ahead, we focus on trends, new techniques, and approaches.</p>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+</section><!-- End Featured Services Section -->
+<!-- ======= About Section ======= -->
+<section id="about" class="about section-bg">
+    <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+            <h2>Bio</h2>
+            <h3>Find Out More <span> ALTC </span></h3>
+            <p>
+                Hello! We are Arab Leading Technology
+                Top-rated Digital Marketing, Web, And Mobile App Development Company.
+            </p>
+        </div>
+
+        <div style="gap: 56px;" class="d-flex gap-6">
+            <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
+                <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+                <h3>
+                    Big Ideas, creative people, new technologies
+                    .
+                </h3>
+                <p class="fst-italic">
+                    A leading full-service Web Solutions and Digital Marketing agency, providing a comprehensive range 
+                    of professional services such as Digital transformation, web design, web development, mobile app development,
+                    search engine optimization (SEO), e-commerce solutions, UI/UX design, pay-per-click advertising (PPC),
+                    social media marketing, video production, content creation, email marketing, and marketing automation.
+                </p>
+                <ul>
+                    <li>
+                        <i class="bx bx-store-alt"></i>
+                        <div>
+                            <h5>
+                                Streamlined Project Management
+                            </h5>
+                            <p>You want results. We've found that the best way to get them is to do research upfront - 
+                                about your business, your competitors
+                                , your target market, and the psychographics of your customers.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <i class="bx bx-images"></i>
+                        <div>
+                            <h5>
+                                A Dedicated Team of Experts
+                            </h5>
+                            <p>Because our customers expect the best, we employ only the best people. Our rigorous qualification 
+                                process ensures that we employ experienced and highly skilled professionals.</p>
+                        </div>
+                    </li>
+                </ul>
+                <p>
+                    Your company's IT systems are critical to its success. We are confident that we can provide you with quality Web & Mobile Solutions, Digital Content,
+                    and Digital Marketing services in ALTC that will benefit your business.
+                </p>
+            </div>
+        </div>
+
+    </div>
+</section><!-- End About Section -->
+<!-- ======= Services Section ======= -->
+<section id="services" class="services">
+    <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+            <h2>Services</h2>
+            <h3>Check our <span>Services</span></h3>
+            <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                <div class="icon-box">
+                    <div class="icon"><img src="~/img/startup.png" /> </div>
+                    <h4><a href="">Digital Transformation</a></h4>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+                <div class="icon-box">
+                    <div class="icon"><img src="~/img/smo.png" /></div>
+                    <h4><a href="">Digital Marketing</a></h4>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+                <div class="icon-box">
+                    <div class="icon"><img src="~/img/m3.png" /></div>
+                    <h4><a href="">Web Solutions</a></h4>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+                <div class="icon-box">
+                    <div class="icon"><img src="~/img/ap.png" /></div>
+                    <h4><a href="">Mobile Solutions</a></h4>
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+                <div class="icon-box">
+                    <div class="icon"><img src="~/img/c.png" /></div>
+                    <h4><a href="">Digital Content</a></h4>
+                    <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                </div>
+            </div>
+
+          
+
+        </div>
+
+    </div>
+</section><!-- End Services Section -->
+}
+
+@* english *@
+
+else
+{
+
+<div style="margin-top:62px;"></div>
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
@@ -24,11 +269,8 @@
         <h2>حل تطوير مواقع الويب والتطبيقات لتحويل الأعمال التجارية وابتكارها.</h2>
         <daiv class="d-flex justify-content-center">
             <a href="/Contact" class="btn-get-started scrollto">ابدا</a>
-        </div>
     </div>
 </section><!-- End Hero -->
-
-
 
 <footer id="footer">
 
@@ -118,7 +360,7 @@
 @* //////////////////// *@
 
 
-</section><!-- نهاية قسم الخدمات -->
+
 <!-- ======= قسم الخدمات ======= -->
 <section id="services" class="services">
     <div class="container" data-aos="fade-up">
@@ -177,8 +419,7 @@
 
     </div>
 </section><!-- نهاية قسم الخدمات -->
-
-
+}
 
 
  
