--- a/ALTC-Site/Views/StaticData/Create.cshtml
+++ b/ALTC-Site/Views/StaticData/Create.cshtml
@@ -8,15 +8,11 @@
 
 <h4>StaticData</h4>
 <hr />
-<div class="row">
+<div class="row" style="transform: translateX(-35px);">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-           @*  <div class="form-group">
-                <label asp-for="id" class="control-label"></label>
-                <input asp-for="id" class="form-control" />
-                <span asp-validation-for="id" class="text-danger"></span>
-            </div> *@
+
             <div class="form-group">
                 <label asp-for="aboutus" class="control-label"></label>
                 <textarea asp-for="aboutus" class="form-control" ></textarea>
