--- a/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -288,6 +288,17 @@
                                 </p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a asp-action="GetAll" asp-controller="Departman" asp-area="Admin" class="nav-link">
+                                <i class="nav-icon far fa-envelope" style="color:dodgerblue"></i>
+
+
+                                <p>
+                                    ALL Department
+
+                                </p>
+                            </a>
+                        </li>
                     </ul>
 
                 </nav>
