--- a/ALTC-Site/Views/Home/Index.cshtml
+++ b/ALTC-Site/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
                     <h4>
                         Big Ideas, Creative people, New technologies
                     </h4>
-                
+
                     <form action="" method="post">
                         <input type="email" name="email"><input type="submit" value="Subscribe">
                     </form>
@@ -94,7 +94,7 @@
                     .
                 </h3>
                 <p class="fst-italic">
-                    A leading full-service Web Solutions and Digital Marketing agency, providing a comprehensive range 
+                    A leading full-service Web Solutions and Digital Marketing agency, providing a comprehensive range
                     of professional services such as Digital transformation, web design, web development, mobile app development,
                     search engine optimization (SEO), e-commerce solutions, UI/UX design, pay-per-click advertising (PPC),
                     social media marketing, video production, content creation, email marketing, and marketing automation.
@@ -106,9 +106,11 @@
                             <h5>
                                 Streamlined Project Management
                             </h5>
-                            <p>You want results. We've found that the best way to get them is to do research upfront - 
+                            <p>
+                                You want results. We've found that the best way to get them is to do research upfront -
                                 about your business, your competitors
-                                , your target market, and the psychographics of your customers.</p>
+                                , your target market, and the psychographics of your customers.
+                            </p>
                         </div>
                     </li>
                     <li>
@@ -117,8 +119,10 @@
                             <h5>
                                 A Dedicated Team of Experts
                             </h5>
-                            <p>Because our customers expect the best, we employ only the best people. Our rigorous qualification 
-                                process ensures that we employ experienced and highly skilled professionals.</p>
+                            <p>
+                                Because our customers expect the best, we employ only the best people. Our rigorous qualification
+                                process ensures that we employ experienced and highly skilled professionals.
+                            </p>
                         </div>
                     </li>
                 </ul>
@@ -182,7 +186,7 @@
                 </div>
             </div>
 
-          
+
 
         </div>
 
@@ -199,25 +203,25 @@
         </div>
 
         <div class="row">
-           
 
-                <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-                    <div class="member">
-                        <div class="member-img">
-                            <img src="~/assets/img/team//team-1.jpg" class="img-fluid" alt="">
-                            <div class="social">
-                                <a href=""><i class="bi bi-twitter"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
-                                <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                        <div class="member-info">
-                            <h4>Mohmed Mostafa</h4>
-                            <span>JobTitle</span>
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+                <div class="member">
+                    <div class="member-img">
+                        <img src="~/assets/img/team//team-1.jpg" class="img-fluid" alt="">
+                        <div class="social">
+                            <a href=""><i class="bi bi-twitter"></i></a>
+                            <a href=""><i class="bi bi-facebook"></i></a>
+                            <a href=""><i class="bi bi-instagram"></i></a>
+                            <a href=""><i class="bi bi-linkedin"></i></a>
                         </div>
                     </div>
+                    <div class="member-info">
+                        <h4>Mohmed Mostafa</h4>
+                        <span>JobTitle</span>
+                    </div>
                 </div>
+            </div>
 
 
 
