--- a/ALTC-Site/Areas/Admin/Views/Departman/Edit.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Departman/Edit.cshtml
@@ -1,20 +1,21 @@
-﻿@model ALTC_Site.ViewModels.DeptVM
+﻿@model ALTC_WebSite.Models.Department
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
+<h4>Department</h4>
 <hr />
-<div class="row" style="margin:50px;">
+<div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" method="post" enctype="multipart/form-data">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="lang" class="control-label"></label>
-                <input asp-for="lang" class="form-control" />
-                <span asp-validation-for="lang" class="text-danger"></span>
+                <label asp-for="id" class="control-label"></label>
+                <input asp-for="id" class="form-control" />
+                <span asp-validation-for="id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -27,12 +28,12 @@
                 <span asp-validation-for="Describtion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="File" class="control-label"></label>
-                <input asp-for="File" class="form-control" />
-                <span asp-validation-for="File" class="text-danger"></span>
+                <label asp-for="FileName" class="control-label"></label>
+                <input asp-for="FileName" class="form-control" />
+                <span asp-validation-for="FileName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
