--- a/ALTC-Site/Views/Contact/Index.cshtml
+++ b/ALTC-Site/Views/Contact/Index.cshtml
@@ -100,6 +100,8 @@
     <div class="form-group">
         <label for="exampleInputPhone">Phone</label>
         <input type="tel" name="Phone" class="form-control" id="Phone" placeholder="Phone" required>
+                                @Html.ValidationMessageFor(model => model.Phone)
+
     </div>
     <div class="form-group">
         <label for="Services">Services</label>
@@ -269,3 +271,5 @@
 
 	$(document).ready(GetRequestForm());
 </script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.validation/1.19.3/jquery.validate.min.js"></script>
