--- a/ALTC-Site/Views/Shared/_Layout.cshtml
+++ b/ALTC-Site/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
         <!-- HEADER -->
         <header role="banner" class="position-absolute margin-top-30 margin-m-top-0 margin-s-top-0">
             <!-- Top Navigation -->
-            <nav class="background-transparent background-transparent-hightlight full-width sticky">
+            <nav class="background-transparent background-transparent-hightlight full-width sticky" style="display: flex;align-items: center;">
                 <div class="s-12 l-2">
                     <a href="" class="logo">
                         <!-- Logo version before sticky nav -->
