layout and team request validation

--- a/ALTC-Site/Areas/Admin/Views/Account/Create.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Account/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ALTC_Site.Models.Account
 
 @{
-  
+
     ViewData["Title"] = "Create";
 }
 
@@ -29,11 +29,6 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="Role" class="control-label"></label>
-                <input asp-for="Role" class="form-control" />
-                <span asp-validation-for="Role" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -44,3 +39,8 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+@section Scripts {
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
