--- a/ALTC-Site/Areas/Admin/Views/Team/Index.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Team/Index.cshtml
@@ -23,8 +23,11 @@
                 @Html.DisplayNameFor(model => model.Phone)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
+                @Html.DisplayNameFor(model => model.Position)
             </th>
+             <th>
+                   Contact 
+             </th>
     
             <th>Options</th>
         </tr>
@@ -41,8 +44,15 @@
                     @Html.DisplayFor(modelItem => item.Phone)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Email)
+                    @Html.DisplayFor(modelItem => item.Position)
                 </td>
+                        <td>
+                            <a href="@item.Facebook">Facebook</a>
+                            |
+                            <a href="@item.Linkedin">LinkedIn</a>
+                            |
+                            <a href="@item.Twitter">Twitter</a>
+                        </td>
             
                 <td>
                     <a asp-controller="Team" asp-action="Edit" asp-route-Id="@item.Id">Edit</a>
