--- a/ALTC-Site/Areas/Admin/Views/Request/Index.cshtml
+++ b/ALTC-Site/Areas/Admin/Views/Request/Index.cshtml
@@ -10,11 +10,11 @@
 <div class="row py-5 mx-0">
 
     <div class="col-md-8 offset-md-2">
-        <div class="text-white mb-3">
+@*         <div class="text-white mb-3">
             <a asp-action="Create" class="btn btn-success">
                 Add New
             </a>
-        </div>
+        </div> *@
     <table class="table ">
         <thead>
             <tr>
