--- a/ALTC-Site/Views/Shared/_LayoutRtl.cshtml
+++ b/ALTC-Site/Views/Shared/_LayoutRtl.cshtml
@@ -131,7 +131,7 @@
                         <div class="s-12 m-12 l-4 margin-m-bottom-30">
                             <h3 class="text-size-16">عنوان الشركة</h3>
                             <p class="text-size-14">
-                                شارع الحلبسة 5 <br>
+                                 شارع المملكة  <br>
                                 لندن - المملكة المتحدة<br>
                                 أوروبا
                             </p>
@@ -161,8 +161,8 @@
             <!-- التذييل السفلي -->
             <section class="padding background-dark full-width">
                 <div class="text-center">
-                    <p class="text-size-12">حقوق النشر 2019، تصميم الرؤية - حديقة الرسومات</p>
-                    <p class="text-size-12">جميع الصور مشتراة من Bigstock. لا تستخدم الصور في موقع الويب الخاص بك.</p>
+                    <p class="text-size-12">حقوق النشر 2023، تصميم الرؤية - حديقة الرسومات</p>
+                  
                 </div>
             </section>
         </footer>
