--- a/ALTC-Site/Views/Request/Create.cshtml
+++ b/ALTC-Site/Views/Request/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
     var lang = ViewBag.lang;
 }
-@if (lang == "Ar")
+@if (lang == "Ar"||lang=="ar")
 {
     <form asp-action="Create" method="post" enctype="multipart/form-data">
         <div class="form-group">
