--- a/ALTC-Site/Views/About/Index.cshtml
+++ b/ALTC-Site/Views/About/Index.cshtml
@@ -20,7 +20,7 @@
 @if (dir == "ltr")
 {
 
-    <section id="about" class="about section-bg">
+    <section style="margin-top:61px; " id="about" class="about section-bg">
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
@@ -155,7 +155,7 @@ else
 {
 
     <!-- ======= قسم حول ======= -->
-    <section id="about" class="about section-bg">
+    <section style="margin-top:61px; " id="about" class="about section-bg">
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
@@ -280,6 +280,8 @@ else
     </section>
 
     <!-- نهاية قسم الخدمات -->
+    <section id="team-members">
+    </section>
 }
 
 
